--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@layer components {
+    .header-primary-btn {
+        background-color: #3563E9;
+        border-radius: 5px;
+        font-weight: bold;
+        color: #fff;
+        padding: 10px;
+        font-size: 14px;
+    }
+}
