Feat: "Alert 모달 버튼 색상 클래스 처리"
기존에 클래스명을 여러 개 리턴하여 처리하던 부분을 @apply로 정리

Resolve: #21
Ref: #18

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -12,6 +12,44 @@
         padding: 10px;
         font-size: 14px;
     }
+
+    .warning-title {
+        @apply text-red-600 font-bold text-base
+    }
+
+    .info-title {
+        @apply text-blue-600 font-bold text-base
+    }
+
+    .confirm-title {
+        @apply text-green-600 font-bold text-base
+    }
+
+    .warning-ok-btn {
+        @apply bg-red-600 w-16 p-2 rounded font-bold text-base text-white
+    }
+
+    .warning-cancel-btn {
+        @apply border border-red-600 w-16 p-2 rounded font-bold text-base text-red-600
+    }
+
+    .confirm-ok-btn {
+        @apply bg-green-600 w-16 p-2 rounded font-bold text-base text-white
+    }
+
+    .confirm-cancle-btn {
+        @apply border border-green-600 w-16 p-2 rounded font-bold text-base text-green-600
+    }
+
+    .info-ok-btn {
+        @apply bg-blue-600 w-16 p-2 rounded font-bold text-base text-white
+    }
+
+    .info-cancel-btn {
+        @apply border border-blue-600 w-16 p-2 rounded font-bold text-base text-blue-600
+    }
+
+
 }
 
 @layer base {
