--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -50,6 +50,23 @@
 }
 
 @layer base {
+  h1 {
+    @apply text-3xl;
+  }
+  h2 {
+    @apply text-2xl;
+  }
+  h3 {
+    @apply text-xl;
+  }
+  h4 {
+    @apply text-lg;
+  }
+
+  ul {
+    @apply list-disc;
+  }
+
   .content {
     min-height: 744px;
     padding-bottom: 140px;
